test/data/semantic/bad/type_cycle.coy
struct S0(S1);

struct S1(S0);

fn main() -> () {
    ()
}
